@@ -45,7 +45,7 @@ void Image_window::show_scaled8to16_bilinear
 						inter_surface->format);
 	Scale_2xBilinear<unsigned char, uint16, Manip8to16>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -63,7 +63,7 @@ void Image_window::show_scaled8to555_bilinear
 						inter_surface->format);
 	Scale_2xBilinear<unsigned char, uint16, Manip8to555>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -81,7 +81,7 @@ void Image_window::show_scaled8to565_bilinear
 						inter_surface->format);
 	Scale_2xBilinear<unsigned char, uint16, Manip8to565>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -99,7 +99,7 @@ void Image_window::show_scaled8to32_bilinear
 						inter_surface->format);
 	Scale_2xBilinear<unsigned char, uint32, Manip8to32>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-			ibuf->line_width, ibuf->height, 
+			ibuf->line_width, ibuf->height+guard_band, 
 			(uint32 *) inter_surface->pixels,
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -114,11 +114,13 @@ void Image_window::show_scaled8to16_BilinearPlus
 	int x, int y, int w, int h	// Area to show.
 	)
 	{
+	increase_area(x,y,w,h, 1,1,1,1, ibuf->width, ibuf->height);
+
 	Manip8to16 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinearPlus<unsigned char, uint16, Manip8to16>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -136,7 +138,7 @@ void Image_window::show_scaled8to555_BilinearPlus
 						inter_surface->format);
 	Scale_2xBilinearPlus<unsigned char, uint16, Manip8to555>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -154,7 +156,7 @@ void Image_window::show_scaled8to565_BilinearPlus
 						inter_surface->format);
 	Scale_2xBilinearPlus<unsigned char, uint16, Manip8to565>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -172,7 +174,7 @@ void Image_window::show_scaled8to32_BilinearPlus
 						inter_surface->format);
 	Scale_2xBilinearPlus<unsigned char, uint32, Manip8to32>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-			ibuf->line_width, ibuf->height, 
+			ibuf->line_width, ibuf->height+guard_band, 
 			(uint32 *) inter_surface->pixels,
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
