@@ -47,7 +47,7 @@ void Image_window::show_scaled8to16_Hq3x
 		inter_surface->format);
 	Scale_Hq3x<uint16, Manip8to16>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		ibuf->line_width, ibuf->height, 
+		ibuf->line_width, ibuf->height+guard_band, 
 		(uint16 *) inter_surface->pixels, 
 		inter_surface->pitch/
 		inter_surface->format->BytesPerPixel,
@@ -63,7 +63,7 @@ void Image_window::show_scaled8to555_Hq3x
 						inter_surface->format);
 	Scale_Hq3x<uint16, Manip8to555>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		ibuf->line_width, ibuf->height, 
+		ibuf->line_width, ibuf->height+guard_band, 
 		(uint16 *) inter_surface->pixels, 
 		inter_surface->pitch/
 		inter_surface->format->BytesPerPixel,
@@ -79,7 +79,7 @@ void Image_window::show_scaled8to565_Hq3x
 						inter_surface->format);
 	Scale_Hq3x<uint16, Manip8to565>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		ibuf->line_width, ibuf->height, 
+		ibuf->line_width, ibuf->height+guard_band, 
 		(uint16 *) inter_surface->pixels, 
 		inter_surface->pitch/
 		inter_surface->format->BytesPerPixel,
@@ -95,7 +95,7 @@ void Image_window::show_scaled8to32_Hq3x
 		inter_surface->format);
 	Scale_Hq3x<uint32, Manip8to32>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		ibuf->line_width, ibuf->height, 
+		ibuf->line_width, ibuf->height+guard_band, 
 		(uint32 *) inter_surface->pixels,
 		inter_surface->pitch/
 		inter_surface->format->BytesPerPixel,
