@@ -41,7 +41,7 @@ void Image_window::show_scaled8to8_interlace
 						paletted_surface->format);
 	Scale_interlace<unsigned char, uint8, Manip8to8>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 				(uint8 *) inter_surface->pixels, 
 				inter_surface->pitch,
 			manip, scale);
@@ -56,7 +56,7 @@ void Image_window::show_scaled8to16_interlace
 						inter_surface->format);
 	Scale_interlace<unsigned char, uint16, Manip8to16>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -72,7 +72,7 @@ void Image_window::show_scaled8to555_interlace
 						inter_surface->format);
 	Scale_interlace<unsigned char, uint16, Manip8to555>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -88,7 +88,7 @@ void Image_window::show_scaled8to565_interlace
 						inter_surface->format);
 	Scale_interlace<unsigned char, uint16, Manip8to565>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -104,7 +104,7 @@ void Image_window::show_scaled8to32_interlace
 						inter_surface->format);
 	Scale_interlace<unsigned char, uint32, Manip8to32>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint32 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
